--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-abi-gen",
-  "version": "5.3.227",
+  "version": "5.3.228",
   "engines": {
     "node": ">=12.1"
   },
@@ -68,13 +68,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitee.com:jjhoc/cmonorepoc.git"
+    "url": "git@github.com:tokenchain/cxgenenzymes.git"
   },
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/0xProject/0x-monorepo/issues"
   },
-  "homepage": "https://gitee.com/jjhoc/cmonorepoc",
+  "homepage": "https://github.com/tokenchain/cxgenenzymes",
   "dependencies": {
     "@0x/types": "^3.2.0",
     "@0x/typescript-typings": "^5.1.1",
