Please check!  17 files changed, 2327 insertions(+), 1335 deletions(-)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "tsconf1.json",
+    "extends": "./tsconf1.json",
     "compilerOptions": {
         "types" : ["node"],
         "module": "commonjs",
